# ponyprog

./: .cvsignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Config.mk  Dockerfile  HISTORY  INSTALL  Makefile  Makefile.win  Pony.rc  PonyProg2000.cbp  PonyProg2000.files  PonyProg2000.layout  PonyProg2000.workspace  README  README.md  aboutmdlg.cpp  aboutmdlg.h  appveyor.yml  astyle.sh  at17xxx.cpp  at17xxx.h  at250bus.cpp  at250bus.h  at250bus2.cpp  at250bus2.h  at250xx.cpp  at250xx.h  at25xxx.cpp  at25xxx.h  at89sbus.cpp  at89sbus.h  at89sxx.cpp  at89sxx.h  at90sbus.cpp  at90sbus.h  at90sxx.cpp  at90sxx.h  (+172 more)
.github/workflows/: cmake.yml
Hardware/PonyProgFT/: .gitignore  PonyProgFT.OutJob  PonyProgFT.PrjPCB  PonyProgFT.PrjPCBStructure  PonyProgFT.PrjPCBVariants  PonyProgFT.SchDoc  PonyProgFT.stackup
Hardware/PonyProgFT/eeprom/: ponyprogft.conf  wr_eeprom.sh
InpOutLib/: DLPortIO.txt  inpout32drv.aps  inpout32drv.cpp  inpout32drv.rc
InpOutLib/DriverSource/: readme.txt
InpOutLib/InstallDriver/: InstallDriver.aps
InpOutLib/VC_test_app/: InpoutTest.cpp  InpoutTest.sln  InpoutTest.vcproj  StdAfx.cpp  StdAfx.h
InpOutLib/Win32/: vssver2.scc
InpOutLib/x64/: vssver2.scc
SETUP/: DLPORTIO.sys  LPTCON.VXD  PONYPROG.ini  PonyProg.iss  PonyProg.url  Readme.txt  license.txt  ponyprog.html  ponyprog2000.html  ponyprog2000.iss
SrcPony/: .gitignore  CMakeLists.txt  Makefile  Translator.cpp  Translator.h  aboutmdlg.cpp  aboutmdlg.h  at17xxx.cpp  at17xxx.h  at250bus.cpp  at250bus.h  at250bus2.cpp  at250bus2.h  at250xx.cpp  at250xx.h  at25xxx.cpp  at25xxx.h  at89sbus.cpp  at89sbus.h  at89sxx.cpp  at89sxx.h  at90sbus.cpp  at90sbus.h  at90sxx.cpp  at90sxx.h  at93cbus.cpp  at93cbus.h  at93cxx.cpp  at93cxx.h  at93cxx8.cpp  at93cxx8.h  binfbuf.cpp  binfbuf.h  bitfield.cpp  bitfield.h  blockmdlg.cpp  blockmdlg.h  businter.h  busio.cpp  busio.h  (+137 more)
SrcPony/forms/: aboutdlg.ui  bitfield.ui  blockdlg.ui  e2dlg.ui  editdlg.ui  fusedlg.ui  mainwindow.ui  notesdlg.ui  osccalibr.ui  prefdialog.ui  progoption.ui  sernumcfg.ui
SrcPony/removed/: cmdenum.h  e2cnv.cpp  e2cnv.h  modaldlg_utilities.cpp  modaldlg_utilities.h  profile.cpp  profile.h  retrymdlg.cpp  retrymdlg.h  string_table.h
cmake/: Compiler.cmake  Dependencies.cmake  FindLibUSB-1.0.cmake  GenerateDEF.cmake  OutOfSourceBuild.cmake  SystemConfiguration.cmake  WordSize.cmake  XMLtoDEFINES.cmake  libusb_version.c  size_type.cpp
debian/: changelog  control  copyright  gbp.conf  postinst  rules
desktop/: ponyprog.desktop
distribution/: CMakeLists.txt  genslmeta.bat
distribution/innosetup/: .gitignore  Readme.txt  ponyprog.html  ponyprog.ini  ponyprog.iss  ponyprog2000.iss
distribution/osx/: CMakeLists.txt  dependencies.cmake.in
distribution/osx/bundle/: CMakeLists.txt  Info.plist.in  package-binary-bundle.cpack.in  ponyprog-startup
distribution/osx/packagemaker/: CMakeLists.txt  package-binary-packagemaker.cpack.in  readme.txt  welcome.txt
distribution/posix/: CMakeLists.txt  package-binary-deb.cpack.in  package-binary-rpm.cpack.in  package-binary-stgz.cpack.in  package-binary-tbz2.cpack.in  package-binary-tgz.cpack.in  postinst.in
distribution/source/: CMakeLists.txt  package-source-tbz2.cpack.in  package-source-tgz.cpack.in  package-source-zip.cpack.in
distribution/win32/: CMakeLists.txt
distribution/win32/inno/: CMakeLists.txt  package-binary-inno.cpack.in
distribution/win32/nsis/: CMakeLists.txt  package-binary-nsis.cpack.in
doxygen/: .cvsignore  ponydoxy
icons/: PonyProg2000.vbm  about.vbm  chip20x20.vbm  copy.vbm  cut.vbm  delete.vbm  edit20x20.vbm  erase20x20.vbm  find.vbm  gen-ico.sh  help.vbm  help2.vbm  help20.vbm  help20x20.vbm  lock.vbm  lock20.vbm  lock20x20.vbm  new.vbm  new20x20.vbm  nuovae.vbm  open.vbm  open20.vbm  open20x20.vbm  open_eep20x20.vbm  open_flash20x20.vbm  paste.vbm  ponyprog.vbm  print.vbm  print20.vbm  print20x20.vbm  program20x20.vbm  rd_all20x20.vbm  rd_eep.vbm  rd_eep20x20.vbm  rd_flash20x20.vbm  read.vbm  read20.vbm  read20x20.vbm  reload.vbm  reload20.vbm  (+16 more)
ics/: at.xml  at89.xml  at90.xml  atmega.xml  attiny.xml  eeprom.xml  pic.xml
lang/: PonyLangConvert.sh  brazilian.utf  bulgarian.utf  chinese.utf  czech.utf  deutsch.utf  english.utf  francais.utf  hrvatski.utf  hungarian.utf  italiano.utf  japanese.utf  nederlands.utf  norwegian.utf  polish.utf  portuguese.utf  romaneste.utf  russian.utf  slovak.utf  slovenski.utf  spanish.utf  srpski.utf  swedish.utf  ukrainian.utf
udev/rules.d/: 90-ponyprog.rules  99-ponyprog.rules
v/: Config.mk  Configwin.mk  Makefile  Makefile.win  Readme  Vlib.cbp  copying.lib
v/includew/v/: v_defs.h  vapp.h  vawinfo.h  vbaseitm.h  vbasewin.h  vbglcnv.h  vboxlblc.h  vbrush.h  vbtncmd.h  vcanvas.h  vcb2x4.h  vcb2x8.h  vcbtncmd.h  vchkboxc.h  vclabelc.h  vcmd.h  vcmdpane.h  vcmdprnt.h  vcmdwin.h  vcolor.h  vcomboc.h  vcpdc.h  vdc.h  vdebug.h  vdialog.h  vdll.h  vfilesel.h  vfont.h  vfontsel.h  vframec.h  vicon.h  vkeys.h  vlabelc.h  vlayoutp.h  vlistc.h  vmemdc.h  vmenu.h  vmodald.h  (+29 more)
v/lib/: .gitignore
v/objx/: ThisIs
v/srcwin/: Makefile  Makefile.v  Makefile.vbor  Makefile.vborgl  Makefile.vdll  Makefile.vgui  fixcrlf.bat  vapp.cpp  vawinfo.cpp  vbaseitm.cpp  vbasewin.cpp  vbglcnv.cc.loop  vbglcnv.cpp  vboxlblc.cpp  vbrush.cpp  vbtncmd.cpp  vcanvas.cpp  vcbtncmd.cpp  vchkboxc.cpp  vclabelc.cpp  vcmd.cpp  vcmdpane.cpp  vcmdprnt.cpp  vcmdwin.cpp  vcolor.cpp  vcomboc.cpp  vcpdc.cpp  vdebug.cpp  vdialog.cpp  vfilesel.cpp  vfinddlg.cpp  vfont.cpp  vfontsel.cpp  vframec.cpp  vgui.vpj  vguibor.vpj  vguidll.vpj  vguiglbor.vpj  vicon.cpp  vlabelc.cpp  (+28 more)
v/srcx/: Makefile  aw3d.c  awcmd3d.c  awlbl3d.c  awscl3d.c  awsim3d.c  awsld3d.c  awtog3d.c  canvas.c  tabstr.c  tabstr.h  vapp.cxx  vawinfo.cxx  vbaseitm.cxx  vbasewin.cxx  vbglcnv.cxx  vbtncmd.cxx  vcanvas.cxx  vcbtncmd.cxx  vchkboxc.cxx  vclabelc.cxx  vcmd.cxx  vcmdpane.cxx  vcmdprnt.cxx  vcmdwin.cxx  vcolor.cxx  vcomboc.cxx  vcpdc.cxx  vdebug.cxx  vdialog.cxx  vfilesel.cxx  vfont.cxx  vfontsel.cxx  vframec.cxx  vicon.cxx  vlabelc.cxx  vlistc.cxx  vmemdc.cxx  vmenu.cxx  vmodald.cxx  (+30 more)
(+107 files in other folders)
